fixed empty line issue on squarecontainer using align-items: flex-end

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
   flex-wrap: wrap;
   gap: 0;
   justify-content: center;
+  align-items: flex-end;
   padding: 0;
   margin: 0;
   background-color: black;
